# weave

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: branch_deployment_cleanup.yaml  branch_deployments.yml  dependency-update-bot.yaml  deploy.yml  lint.yml  test.yml
adrs/: 0001-data-downloading.ipynb  0002-aws-permissions.md  0003-ssen-substation-locations.ipynb  0004-ssen-asset-automation.md  0005-sorting.md
docs/: smart-meter-examples-beta.ipynb  smart-meter-examples-v1.0.ipynb  smart-meter-examples.ipynb  smart-meter-polars-examples.ipynb
experiments/: nged-exploration.ipynb  nged-feeder-subset.ipynb  ssen-feeder-subset.ipynb  ssen-july-dip.ipynb  ssen-substation-projections.ipynb  substation-map.ipynb
weave/: automation_conditions.py  core.py  dagster_helpers.py  definitions.py  sensors.py
weave/assets/: core.py  dno_lv_feeder_combined_geoparquet.py  dno_lv_feeder_files.py  dno_lv_feeder_monthly_parquet.py  dno_smart_meter_files.py  ons.py  ssen_substation_locations.py
weave/resources/: nged.py  ons.py  output_files.py  raw_files.py  ssen.py
weave/utils/: polars_helpers.py
weave_tests/: test_assets.py  test_automation.py  test_dagster_helpers.py  test_resources.py  test_sensors.py
weave_tests/assets/: test_dno_lv_feeder_combined_geoparquet.py  test_dno_lv_feeder_files.py  test_dno_lv_feeder_monthly_parquet.py  test_onspd.py  test_ssen_substation_locations.py
weave_tests/fixtures/: nged_files.json  npg_files.json  ssen_files.json
weave_tests/fixtures/nged/: datapackage.json
weave_tests/fixtures/nged/lv_feeder_files/: aggregated-smart-meter-data-lv-feeder-2024-01-part0000_head.csv
weave_tests/fixtures/ssen/: lv_feeder_postcode_mapping.csv
weave_tests/fixtures/ssen/lv_feeder_files/: 2024-02-12_for_location_lookup.csv  2024-02-12_head.csv
