[project]
name = "weave"
version = "0.1.0"
description = "We unlock energy data for everyone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.8.8",
    "dagster-cloud>=1.8.8",
    "weave",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "requests>=2.32.3",
    "zlib-ng>=0.5.1",
    "s3fs>=2024.9.0",
    "humanize>=4.11.0",
    "dagster-pandas>=0.24.8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["weave_tests"]

[tool.dagster]
module_name = "weave.definitions"
code_location_name = "weave"

[tool.uv]
dev-dependencies = [
    "contextily>=1.6.2",
    "dagster-webserver>=1.8.8",
    "folium>=0.18.0",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "mapclassify>=2.8.1",
    "matplotlib>=3.9.2",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "responses>=0.25.3",
]

[tool.uv.sources]
weave = { workspace = true }
